--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -46,11 +46,11 @@ $navy-grey: #97a0ac;
 $navy: #626070;
 
 // Spacing
-$spacing-50: 0.25rem;
-$spacing-100: 0.5rem;
-$spacing-150: 0.75rem;
-$spacing-200: 1rem;
-$spacing-250: 1.25rem;
-$spacing-300: 1.5rem;
-$spacing-400: 2rem;
-$spacing-500: 2.5rem;
+$spacing-50: 0.25rem; // 4px
+$spacing-100: 0.5rem; // 8px
+$spacing-150: 0.75rem; // 12px
+$spacing-200: 1rem; // 16px
+$spacing-250: 1.25rem; // 20px
+$spacing-300: 1.5rem; // 24px
+$spacing-400: 2rem; // 32px
+$spacing-500: 2.5rem; // 40px
