--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,11 +14,11 @@ $no-italic: normal;
 $italic: italic;
 
 // Font sizes
-$text-xs: 0.75rem;
-$text-sm: 0.875rem;
-$text-base: 1rem;
-$text-lg: 1.25rem;
-$text-xl: 2rem;
+$text-xs: 0.75rem; // 12px
+$text-sm: 0.875rem; // 14px
+$text-base: 1rem; // 16px
+$text-lg: 1.25rem; // 20px
+$text-xl: 2rem; // 32px
 
 // Colors
 $white: #fff;
